<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.techbayportal.itaste.ui.fragments.contactusfragment.ContactUsViewModel" />
    </data>

<RelativeLayout
    android:background="@color/mainBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.contactusfragment.ContactUsFragment">

    <RelativeLayout
        android:id="@+id/relative_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:onClick="@{()->viewModel.onBackButtonClicked()}"
            android:id="@+id/img_back"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                app:tint="@color/mainIconColor"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:src="@drawable/icon_backarrow"
                android:contentDescription="@string/back_icon"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/get_in_touch"
            android:textColor="@color/titleTextColorBlack"
            android:textSize="22sp"
            android:contentDescription="@string/back_icon">

        </TextView>

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_top">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_25sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/name"
                            android:textAllCaps="true"
                            android:textColor="@color/titleTextColorBlack"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/et_userName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:hint="@string/ed_tamer"
                            android:textColorHint="@color/titleTextColorBlack"
                            android:textColor="@color/titleTextColorBlack"
                            android:textSize="14sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/email"
                            android:textAllCaps="true"
                            android:textColor="@color/titleTextColorBlack"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/et_userEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:hint="@string/email_123_com"
                            android:textColor="@color/titleTextColorBlack"
                            android:textColorHint="@color/titleTextColorBlack"
                            android:textSize="14sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/what_do_you_want_to_talk_about"
                            android:textAllCaps="true"
                            android:textColor="@color/titleTextColorBlack"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/et_usermessage"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:padding="@dimen/_10sdp"
                            android:layout_width="match_parent"
                            android:layout_height="350dp"
                            android:fontFamily="@font/roboto_light"
                            android:text="@string/ask_us_anything"
                            android:gravity="start"
                            android:textColorHint="@color/titleTextColorBlack"
                            android:textColor="@color/titleTextColorBlack"
                            android:textSize="14sp"
                            android:background="@drawable/btn_curve_small">
                        </EditText>


                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/rippleConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="30dp"
        app:mrl_rippleColor="@color/colorLightOrange">

        <Button
            android:id="@+id/btn_send"
            android:onClick="@{()->viewModel.onConfirmButtonClicked()}"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:background="@drawable/btn_curve_orange"
            android:fontFamily="@font/roboto_bold"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:text="@string/send"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="16sp">

        </Button>
    </com.balysv.materialripple.MaterialRippleLayout>
</RelativeLayout>
</layout>