<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.techbayportal.itaste.ui.fragments.signupvendorfragment.SignupVendorViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBackground">
        <RelativeLayout
            android:id="@+id/relative_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp">

            <LinearLayout
                android:id="@+id/img_back"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:onClick="@{()->viewModel.onBackButtonClicked()}">

                <ImageView
                    app:tint="@color/mainIconColor"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_backarrow" />
            </LinearLayout>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/add_details"
                android:textColor="@color/titleTextColorBlack"
                android:textSize="22sp">

            </TextView>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:fillViewport="true"
            android:layout_height="match_parent"
            android:layout_below="@+id/relative_top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:orientation="vertical">


                <Spinner
                    android:id="@+id/spinner_country"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_37sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/spinner_background"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/titleTextColorBlack"
                    android:textColorHint="@color/titleTextColorBlack"
                   />


                <Spinner
                    android:id="@+id/spinner_city"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_37sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/spinner_background"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/titleTextColorBlack"
                    android:textColorHint="@color/titleTextColorBlack" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:fontFamily="@font/roboto_bold"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/days_of_work"
                    android:textColor="@color/titleTextColorBlack"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/select_days_you_want_to_work_on"
                    android:textColor="@color/titleTextColorBlack"
                    android:textSize="14sp" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_days"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_bold"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/are_your_services"
                    android:textColor="@color/titleTextColorBlack"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/rg_service_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical"
                    android:onClick="@{()->viewModel.onServiceTypeRadioButtonClicked()"
                    >

                    <RadioButton
                        android:buttonTint="@color/colorOrange"
                        android:id="@+id/rb_deliverable"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/deliverable"
                        android:textColor="@color/titleTextColorBlack"
                        android:textSize="14sp" />


                    <RadioButton
                        android:buttonTint="@color/colorOrange"
                        android:id="@+id/rb_not_deliverable"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/not_deliverable"
                        android:textColor="@color/titleTextColorBlack"
                        android:textSize="14sp" />
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_bold"
                    android:lineSpacingExtra="-3sp"
                    android:text="@string/description_optional"
                    android:textColor="@color/titleTextColorBlack"
                    android:textSize="16sp" />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/item_days_grey_boundary"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="top"
                    android:hint="@string/write_something_about_your_shop"
                    android:imeOptions="actionNext"
                    android:inputType="text|textMultiLine"
                    android:padding="10dp"
                    android:textColor="@color/titleTextColorBlack"
                    android:textColorHint="@color/titleTextColorBlack"
                    android:textSize="15sp" />


                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/ripple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    app:mrl_rippleColor="@color/colorLightOrange">

                    <Button
                        android:id="@+id/btn_letsGo"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/btn_curve_orange"
                        android:fontFamily="@font/roboto_bold"
                        android:lineSpacingExtra="@dimen/_3sdp"
                        android:text="@string/let_s_go"
                        android:textAllCaps="true"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:onClick="@{()->viewModel.onSignUpVendorButtonClicked()}"
                        >

                    </Button>
                </com.balysv.materialripple.MaterialRippleLayout>
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</layout>