<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.techbayportal.itaste.ui.fragments.blockedaccountsfragment.BlockedAccountsViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBackground"
        tools:context=".ui.fragments.blockedaccountsfragment.BlockedAccountsFragment">

        <RelativeLayout
            android:id="@+id/relative_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp">

            <LinearLayout
                android:id="@+id/img_back"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:onClick="@{()->viewModel.onBackButtonClicked()}">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:contentDescription="@string/back_icon"
                    android:src="@drawable/icon_backarrow"
                    app:tint="@color/mainIconColor" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/blocked_accounts"
                android:textColor="@color/titleTextColorBlack"
                android:textSize="22sp">

            </TextView>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relative_top"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBlockedAccounts"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>

        </RelativeLayout>
        <LinearLayout
            android:id="@+id/ll_noBlockedAccounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/no_block_accounts"
                app:tint="@color/mainIconColor"
                >
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_block_accounts"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/titleTextColorBlack">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_don_t_have_any_block_accounts"
                android:textSize="14sp"
                android:fontFamily="@font/roboto_light"
                android:textColor="@color/titleTextColorBlack">

            </TextView>
        </LinearLayout>
    </RelativeLayout>
</layout>